refactor: migrate to LangChain orchestration + HuggingFace Inference API for LLM
- Refactored all 14 source modules to use LangChain components:
  - LangChain Chroma vectorstore, BM25Retriever, EnsembleRetriever (hybrid)
  - CrossEncoderReranker via ContextualCompressionRetriever
  - LCEL RAG chain (prompt | llm | parser)
  - HuggingFaceEmbeddings (BAAI/bge-small-en-v1.5)
- Replaced Ollama with HuggingFace Inference API (ChatHuggingFace + HuggingFaceEndpoint)
  - Model: meta-llama/Llama-3.1-8B-Instruct
  - Ollama kept as fallback (configurable via LLM_BACKEND env var)
- Fixed ChromaDB ID retrieval (collection.query instead of similarity_search)
- Fixed hybrid retriever ID reconstruction from source + chunk_index
- Added LangChain smoke tests (20/20 pass)
- Regenerated eval dataset from indexed papers
- Baseline metrics: P@5=0.850, R@5=0.900, MRR=0.900, Faithfulness=0.975

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ wheels/
 
 # Virtual Environment
 venv/
+.venv/
 env/
 ENV/
 
@@ -64,5 +65,12 @@ models/
 .coverage
 htmlcov/
 
+# Results
+results/
+
 # Redis
 dump.rdb
+
+# Misc
+retrieval_results.txt
+PROJECT_OVERVIEW.md
